[TASK] Removing Git-specific files from Firebase Hosting

--- a/firebase.json
+++ b/firebase.json
@@ -16,7 +16,9 @@
     "ignore": [
       "firebase.json",
       "**/.*",
-      "**/node_modules/**"
+      "**/node_modules/**",
+      ".gitignore",
+      "README.md"
     ],
     "rewrites": [{
       "source": "**",
